# TimeEvolver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  File.cu  Header.cuh  LICENSE  README.md
.github/workflows/: Testscmake.yml  cmake.yml
cmake/: CMakeLists.txt
core/: CMakeLists.txt  File.cu  krylovLogger.cpp  krylovLogger.h  krylovObservables.cpp  krylovObservables.h  krylovTimeEvolver.cpp  krylovTimeEvolver.h  mathHeader.h  matrixDataTypes.cpp  matrixDataTypes.h  version.h
example/: CMakeLists.txt  analysisOutputData.nb  exampleHamiltonian.cpp  exampleHamiltonian.h  main.cpp  simpleExample.cpp
helper/: Basis.cpp  Basis.h  CMakeLists.txt  CudaHelper.h  hamiltonian.cpp  hamiltonian.h  krylovHelper.cpp  krylovHelper.h  krylovLogger.cpp  krylovLogger.h  parameter.h
output/: ResultBlackHole_N1_Nm1_K1_C1_DeltaN12_C01_Cm1_maxT1000_tol1e-08_samplingStep1_m40_fastIntegration0.h5  ResultBlackHole_N1_Nm1_K1_C1_DeltaN12_C01_Cm1_maxT1000_tol1e-08_samplingStep1_m40_fastIntegration0mode0.csv  ResultBlackHole_N1_Nm1_K1_C1_DeltaN12_C01_Cm1_maxT1000_tol1e-08_samplingStep1_m40_fastIntegration0mode1.csv  ResultBlackHole_N1_Nm1_K1_C1_DeltaN12_C01_Cm1_maxT1000_tol1e-08_samplingStep1_m40_fastIntegration0mode2.csv  ResultBlackHole_N1_Nm1_K1_C1_DeltaN12_C01_Cm1_maxT1000_tol1e-08_samplingStep1_m40_fastIntegration0mode3.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0.h5  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode0.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode1.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode2.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode3.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode4.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode5.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode6.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode7.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode8.csv  ResultBlackHole_N20_Nm2_K4_C1_DeltaN12_C01_Cm1_maxT10_tol1e-08_samplingStep0.01_m40_fastIntegration0mode9.csv  SimpleExampleOutputOccupationNumber0.csv  SimpleExampleOutputOccupationNumber1.csv  analysisOutputData.nb
test/: CMakeLists.txt  test.cpp  testBlackHole.cpp  testBlackHoleLB.cpp  testSimpleExample.cpp
